fix overflow on post > p

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -45,6 +45,9 @@ pre {
 
 .post p {
   margin: 0.5rem 0;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .post h1,
